Fix wrong colors in tabs, Change animations durations, Change some preview styles

--- a/src/less/components/accordion.less
+++ b/src/less/components/accordion.less
@@ -5,7 +5,7 @@
         display: block;
         position: relative;
         
-        padding: 1rem 3rem 1rem 1rem;
+        padding: 0 1rem;
         
         color: @accordion-color;
         background: @accordion-bgcolor;
@@ -27,8 +27,19 @@
     }
     
     > .item > .title {
-        &:hover {
+        display: block;
+        position: relative;
+        left: -1rem;
+        
+        width: 100%;
+        
+        padding: 1rem;
+        
+        &:hover,
+        &:focus {
             cursor: pointer;
+            color: @accordion-color__focus;
+            background: @accordion-bgcolor__focus;
         }
     }
     
@@ -45,7 +56,7 @@
         
         &:checked + .title + .content {
             max-height: 30rem;
-            margin-top: 1rem;
+            margin: 1rem 0;
             opacity: 1;
             
             transition: all @accordion-animation-duration @accordion-animation-function;
