--- a/src/less/components/tabs.less
+++ b/src/less/components/tabs.less
@@ -10,19 +10,19 @@
     > input:nth-of-type(1):checked ~ .labels > label:nth-of-type(1) {
         color: @tabs-color__current;
         background: @tabs-bgcolor__current;
-        border-bottom-color: @tabs-bgcolor__focus;
+        border-bottom-color: @tabs-bgcolor__current;
     }
     
     > input:nth-of-type(2):checked ~ .labels > label:nth-of-type(2) {
         color: @tabs-color__current;
         background: @tabs-bgcolor__current;
-        border-bottom-color: @tabs-bgcolor__focus;
+        border-bottom-color: @tabs-bgcolor__current;
     }
     
     > input:nth-of-type(3):checked ~ .labels > label:nth-of-type(3) {
         color: @tabs-color__current;
         background: @tabs-bgcolor__current;
-        border-bottom-color: @tabs-bgcolor__focus;
+        border-bottom-color: @tabs-bgcolor__current;
     }
 
     > .labels {
