--- a/src/less/constants.less
+++ b/src/less/constants.less
@@ -2,8 +2,8 @@
 @like-animation-duration:    500ms;
 @toggle-animation-duration:  300ms;
 @mobile-navigation-animation-duration: 600ms;
-@accordion-animation-duration: 1000ms;
-@tabs-animation-duration:      1000ms;
+@accordion-animation-duration: 600ms;
+@tabs-animation-duration:      600ms;
 @hover-animation-function:   cubic-bezier(.53, .05, .13, .94);
 @like-animation-function:    cubic-bezier(.53, .05, .13, .94);
 @toggle-animation-function:  cubic-bezier(.85, .11, .46, .98);
